// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton Atom tests should render IconButton correctly 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.25rem;
  width: 2.25rem;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:hover {
  background-color: #EEEEEE;
}

.c0:active {
  background-color: #E2E2E2;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-sharp"
        color="#000000"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton Atom tests should render primary IconButton 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  color: #FFFFFF;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  height: 2.25rem;
  width: 2.25rem;
}

.c0:hover:not(:active) {
  background-color: #0e55d7;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-sharp"
        color="#FFFFFF"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton Atom tests should render primaryNeutral IconButton 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  color: #276EF1;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.25rem;
  width: 2.25rem;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:hover {
  color: #276EF1;
  background-color: #EFF3FE;
}

.c0:active {
  background-color: #D4E2FC;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-sharp"
        color="#276EF1"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton Atom tests should render secondary IconButton 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #FFFFFF;
  height: 2.25rem;
  width: 2.25rem;
}

.c0:hover:not(:active) {
  background-color: #E2E2E2;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-sharp"
        color="#000000"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;
